# fuzzy_search

./: CMakeLists.txt  README.md  main.cpp  simtable.json  vcpkg.json
benchmarks/: CMakeLists.txt  benchmark_main.cpp  benchmark_util.cpp  benchmark_util.h  fuzzy_search_benchmark.cpp  fuzzy_search_benchmark.h  table_benchmark.cpp
scripts/: simtable_creator.py
src/: CMakeLists.txt  simtable.cpp  simtable.h  tools.cpp  tools.h
tests/: CMakeLists.txt  editdistance_unittest.cpp  simtable_unittest.cpp  table_fixture.cpp
